syntax = "proto3";
package aadk.v1;

import "aadk/v1/common.proto";

enum ErrorCode {
  ERROR_CODE_UNSPECIFIED = 0;

  // Generic
  ERROR_CODE_INTERNAL = 1;
  ERROR_CODE_INVALID_ARGUMENT = 2;
  ERROR_CODE_NOT_FOUND = 3;
  ERROR_CODE_ALREADY_EXISTS = 4;
  ERROR_CODE_PERMISSION_DENIED = 5;
  ERROR_CODE_UNAVAILABLE = 6;
  ERROR_CODE_TIMEOUT = 7;
  ERROR_CODE_CANCELLED = 8;

  // Job
  ERROR_CODE_JOB_NOT_FOUND = 100;

  // Toolchain
  ERROR_CODE_TOOLCHAIN_VERIFY_FAILED = 200;
  ERROR_CODE_TOOLCHAIN_INSTALL_FAILED = 201;
  ERROR_CODE_TOOLCHAIN_INCOMPATIBLE_HOST = 202;

  // Build
  ERROR_CODE_BUILD_FAILED = 300;

  // Targets
  ERROR_CODE_ADB_NOT_AVAILABLE = 400;
  ERROR_CODE_TARGET_NOT_REACHABLE = 401;
  ERROR_CODE_INSTALL_FAILED = 402;
  ERROR_CODE_LAUNCH_FAILED = 403;
}

message Remediation {
  string title = 1;
  string description = 2;
  string action_id = 3;
  repeated KeyValue params = 4;
}

message ErrorDetail {
  ErrorCode code = 1;
  string message = 2;
  string technical_details = 3;
  repeated Remediation remedies = 4;
  string correlation_id = 5;
}
